--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Paduaclinic.GitHub.io by padua-clinic</title>
+    <title>Padua GP Clinic</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Paduaclinic.GitHub.io</h1>
-        <p>Padua GP Clinic</p>
+        <h1>Padua GP Clinic</h1>
+        <p>Bishopstown</p>
 
         <p class="view"><a href="https://github.com/padua-clinic/PaduaClinic.github.io">View the Project on GitHub <small>padua-clinic/PaduaClinic.github.io</small></a></p>
 
